lab3/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-itmo
  namespace: second-itmo
  labels:
    app: second-itmo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: second-itmo
  template:
    metadata:
      labels:
        app: second-itmo
    spec:
      serviceAccountName: second-itmo
      containers:
        - name: itdt-contained-frontend
          image: ifilyaninitmo/itdt-contained-frontend:master
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
