lab3/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: second-itmo
  namespace: second-itmo
  labels:
    app: second-itmo
spec:
  type: NodePort
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: second-itmo
